--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <meta name="description" content="国内一流的网页平面UI设计培训机构">
  <title>欣欣蛋糕店</title>
  <link rel="stylesheet" type="text/css" href="css/index.css">
- <script type="text/javascript" src="javascript/index.js"></script>
+ <script type="text/javascript" src="js/index.js"></script>
  </head>
  	<body>
  	<!--top begin-->
